--- a/src/components/DynamicCampaignCardCategory.module.css
+++ b/src/components/DynamicCampaignCardCategory.module.css
@@ -1,27 +1,14 @@
-.card {
-  display: block;
-  border-style: solid;
-  border-width: thin;
-  border-color: black;
-  width: 315px;
-  height: 430px;
-  background-color: white;
-  margin: 10px;
-  position: absolute;
-}
-
 .profile {
   display: flex;
   flex-direction: row;
   justify-content: left;
 }
 .profile p {
-  margin-left: 20px;
   text-align: center;
   font-weight: bolder;
-  font-size: 16pt;
+  font-size: large;
 }
-.explore {
+.topLinks {
   margin-top: 5px;
   margin-left: 20px;
   font-size: 10pt;
@@ -43,14 +30,14 @@
 .imageGridCell {
   width: 9rem;
   height: 9rem;
-  background-color: white;
+  background-color: #e6ffff;
   border-width: thick;
   border-color: black;
 }
 
 .item {
-  width: 9rem;
-  height: 9rem;
+  width: 8rem;
+  height: 8rem;
   margin: 8px;
   background-color: transparent;
   display: inline-grid;
@@ -66,12 +53,10 @@
 }
 
 .itemP {
-  width: 7rem;
   font-size: 11px;
   color: black;
-  margin-left: 20px;
+  text-align: center;
   text-decoration: none;
-  word-wrap: break-word;
 }
 a:link {
   text-decoration: none;
