--- a/src/components/DynamicCampaignCardProducts.module.css
+++ b/src/components/DynamicCampaignCardProducts.module.css
@@ -1,26 +1,15 @@
-.card {
-  display: block;
-  border-style: solid;
-  border-width: thin;
-  border-color: black;
-  width: 315px;
-  height: 430px;
-  background-color: white;
-  margin: 10px;
-  position: absolute;
-}
-
 .profile {
   display: flex;
   flex-direction: row;
   justify-content: left;
 }
 .profile p {
+  margin-left: 20px;
   text-align: center;
   font-weight: bolder;
-  font-size: large;
+  font-size: 16pt;
 }
-.topLinks {
+.explore {
   margin-top: 5px;
   margin-left: 20px;
   font-size: 10pt;
@@ -42,14 +31,14 @@
 .imageGridCell {
   width: 9rem;
   height: 9rem;
-  background-color: #e6ffff;
+  background-color: white;
   border-width: thick;
   border-color: black;
 }
 
 .item {
-  width: 8rem;
-  height: 8rem;
+  width: 9rem;
+  height: 9rem;
   margin: 8px;
   background-color: transparent;
   display: inline-grid;
@@ -65,10 +54,12 @@
 }
 
 .itemP {
+  width: 7rem;
   font-size: 11px;
   color: black;
-  text-align: center;
+  margin-left: 20px;
   text-decoration: none;
+  word-wrap: break-word;
 }
 a:link {
   text-decoration: none;
