--- a/src/components/TopBanner.module.css
+++ b/src/components/TopBanner.module.css
@@ -2,7 +2,6 @@
   position: relative;
   width: 100%;
   height: 35rem;
-  background-color: aquamarine;
   display: flex;
   flex-direction: row;
   overflow: hidden;
@@ -16,16 +15,18 @@
 }
 .navigatebox {
   position: absolute;
-  height: 99%;
-  width: 7%;
+  height: 245px;
+  width: 48px;
   background-color: transparent;
+  border-style: double;
+  border-color: transparent;
+  border-width: 4px;
 }
 
 .navigatebox:hover {
-  border-style: double;
   border-color: black;
-  border-width: 4px;
 }
+
 .positionleft {
   left: 0%;
 }
@@ -38,8 +39,8 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin-top: 16rem;
+  margin-top: 100px;
   font-family: inherit;
-  font-size: 5rem;
+  font-size: 70px;
   align-items: center;
 }
