--- a/src/components/HomePage/BannerNavigation.module.css
+++ b/src/components/HomePage/BannerNavigation.module.css
@@ -1,22 +1,13 @@
-.bannerbox {
-  position: relative;
+.navigateBanner {
   width: 100%;
-  height: 35rem;
-  display: flex;
-  flex-direction: row;
-  overflow: hidden;
 }
 
-.images {
-  position: absolute;
-  width: 100%;
-
-  transition: transform 1s;
-}
 .navigatebox {
   position: absolute;
-  height: 245px;
+  top: 45px;
+  height: 267px;
   width: 48px;
+  padding-left: 10px;
   background-color: transparent;
   border-style: double;
   border-color: transparent;
@@ -25,13 +16,14 @@
 
 .navigatebox:hover {
   border-color: black;
+  cursor: grab;
 }
 
-.positionleft {
+.btn__left {
   left: 0%;
 }
 
-.positionright {
+.btn__right {
   right: 0%;
 }
 
@@ -39,7 +31,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin-top: 100px;
+  margin-top: 110px;
   font-family: inherit;
   font-size: 70px;
   align-items: center;
