--- a/src/components/HomePage/DailyDealsProduct.module.css
+++ b/src/components/HomePage/DailyDealsProduct.module.css
@@ -3,6 +3,9 @@
   flex-direction: row;
   width: 100%;
   height: 260px;
+  position: absolute;
+  top: 1235px;
+  background-color: white;
   overflow: hidden;
 }
 
@@ -23,6 +26,5 @@
   left: 5px;
   color: black;
   font-size: 13pt;
-
   text-align: center;
 }
