--- a/src/components/HomePage/TopNavBar.module.css
+++ b/src/components/HomePage/TopNavBar.module.css
@@ -98,7 +98,7 @@
   margin-top: 0px;
   font-size: 16pt;
   font-weight: bolder;
-  color: white;
+  color: rgb(243, 101, 6);
 }
 .cart {
   position: relative;
