--- a/src/layout/HomePage.module.css
+++ b/src/layout/HomePage.module.css
@@ -1,14 +1,10 @@
 .home {
   width: 100%;
   height: 110rem;
+  margin-top: 63px;
   background-color: #c7c5c5;
+  /* background-color: red; */
   position: relative;
-}
-
-.topBanner {
-  position: absolute;
-  top: 108px;
-  width: 100%;
 }
 
 .campaignCardGridTop {
@@ -17,7 +13,7 @@
   position: absolute;
   grid-template-columns: auto auto auto auto;
   column-gap: 15px;
-  top: 22rem;
+  top: 325px;
 }
 
 .campaignCardGridBottom {
@@ -26,13 +22,5 @@
   position: absolute;
   grid-template-columns: 670px 315px 315px;
   column-gap: 20px;
-  top: 805px;
-}
-
-.dealsBanner {
-  width: 100%;
-  height: 260px;
-  position: absolute;
-  top: 1260px;
-  background-color: white;
+  top: 780px;
 }
