--- a/src/ui/ImageSliderDeals.module.css
+++ b/src/ui/ImageSliderDeals.module.css
@@ -1,3 +1,34 @@
+.banner {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 260px;
+  position: absolute;
+  top: 1235px;
+  background-color: white;
+  overflow: visible;
+}
+
+.product {
+  width: 600px;
+  height: 250px;
+
+  padding: 4px 5px 4px 5px;
+  margin-left: 10px;
+}
+.image {
+  width: auto;
+  align-content: center;
+  padding: 2px 35px 2px 35px;
+}
+
+.text {
+  left: 5px;
+  color: black;
+  font-size: 13pt;
+  text-align: center;
+}
+
 .navigateBanner {
   width: 100%;
 }
