--- a/src/ui/ImageSliderTopBanner.module.css
+++ b/src/ui/ImageSliderTopBanner.module.css
@@ -1,3 +1,12 @@
+.image {
+  position: absolute;
+  top: 44px;
+  width: 100%;
+
+  /* THIS creates the animation! */
+  transition: transform 1s;
+}
+
 .navigateBanner {
   width: 100%;
 }
