--- a/src/components/HomePage/TopNavBar.module.css
+++ b/src/components/HomePage/TopNavBar.module.css
@@ -109,3 +109,46 @@
   font-weight: bolder;
   color: white;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdownContent {
+  display: none;
+  position: absolute;
+  top: 44px;
+  width: 200px;
+  padding: 10px;
+  background-color: white;
+  min-height: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdownContent p {
+  color: black;
+  font-size: 10pt;
+  font-weight: normal;
+  padding: 1px 16px 0 16px;
+  text-decoration: none;
+  display: block;
+  height: 10px;
+}
+
+.dropdownContent p:hover {
+  color: rgb(245, 85, 11);
+  cursor: grab;
+}
+
+.dropdown:hover .dropdownContent {
+  display: block;
+}
+
+.dropdownHeading {
+  font-weight: bold;
+  font-size: 13pt;
+  color: black;
+  margin-left: 16px;
+}
